--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,20 @@
 {
   "name": "polymer-fullpage",
-  "main": "polymer-fullpage.html",
+  "main": [
+    "polymer-fullpage.html"
+    ],
+  "description": " Polymer Module which uses fullpage.js",
+  "keywords": [
+    "fullpage.js",
+    "jquery",
+    "web-components"
+  ],
+  "license": "MIT",
+  "ignore": [
+    "bower_components",
+    "test",
+    "tests"
+  ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
     "fullpage.js": "^2.8.8"
@@ -10,11 +24,5 @@
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
     "web-component-tester": "^4.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
-  },
-  "keywords": [
-    "js-library",
-    "jquery",
-    "fullpage.js",
-    "web-components",
-  ]
+  }
 }
